tests/positive/ownership_move.safe
-- Test: ownership_move
-- Description: Variable move between scopes for inferred references.
--   A direct self-recursive record is inferred as a reference root and moves
--   on assignment.
-- Expected: ACCEPT

package ownership_move

   type payload is record
      value : integer
      next : payload

   function transfer
      source : not null payload = (value = 42, next = null)
      target : payload = null

      target = source
      target.value = 100
