tests/negative/neg_own_double_move.safe
-- Test: neg_own_double_move
-- Description: Moving an inferred-reference value that has already been moved.
-- Expected: REJECT double_move

package double_move_test

   type payload is record
      value : integer
      next : payload

   function double_move
      source  : not null payload = (value = 42, next = null)
      target1 : payload = null
      target2 : payload = null

      target1 = source
      target2 = source  -- ERROR: Source has already been moved
